HERCULES-9247 [UPV][CSP] Solicitudes sin convocatoria
Mejora - CSP. Se permite la creación de solicitudes sin estar vinculadas a una convocatoria, tanto para el perfil de investigación como para el perfil de gestión.